# lazycaml

./: test.ll
lib/codegen/: codegen.ml  dune  kast.ml  prelude.ml
lib/defs/: ast.ml  dune  fun.ml  globals.mli
lib/interpreter/: dune
lib/lexer/: dune  formatter.ml
lib/parser/: ast.ml  dune  parser.ml  parser.mli
test/: dune  fixtures.ml  test_codegen.ml  test_lexer.ml  test_parser.ml
