(test
 (name test_codegen)
 (modules test_codegen fixtures)
 (libraries 
  compiler.parser
  compiler.codegen
  compiler.lexer  
  compiler.defs))

; (test
;  (name test_defs)
;  (modules test_defs)
;  (libraries compiler.defs fixtures))

(test
 (name test_lexer)
 (modules test_lexer fixtures)
 (libraries 
  compiler.lexer  
  compiler.defs))

(test
 (name test_parser)
 (modules test_parser fixtures)
 (libraries compiler.parser compiler.lexer))